--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "url": "https://github.com/Lucasnhso/clean-node-tdd-api/issues"
   },
   "homepage": "https://github.com/Lucasnhso/clean-node-tdd-api#readme",
+  "standard": {
+    "env": ["jest"]
+  },
   "devDependencies": {
     "husky": "^8.0.2",
     "jest": "^29.3.1",
