--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Api to study and pratice Clean Architecture and TDD with Typescript",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest --watchAll",
+    "test:staged": "jest"
   },
   "repository": {
     "type": "git",
