--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Api to study and pratice Clean Architecture and TDD with Typescript",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watchAll",
-    "test:staged": "jest --passWithNoTests"
+    "test": "jest --watchAll --silent --colors --noStackTrace",
+    "test:staged": "jest --passWithNoTests --findRelatedTests --silent --noStackTrace"
   },
   "repository": {
     "type": "git",
