--- a/package.json
+++ b/package.json
@@ -21,12 +21,17 @@
   },
   "homepage": "https://github.com/Lucasnhso/clean-node-tdd-api#readme",
   "standard": {
-    "env": ["jest"]
+    "env": [
+      "jest"
+    ]
   },
   "devDependencies": {
     "husky": "^8.0.2",
     "jest": "^29.3.1",
     "lint-staged": "^13.0.3",
     "standard": "^17.0.0"
+  },
+  "dependencies": {
+    "validator": "^13.7.0"
   }
 }
